Add Ansible example improvements, bug fixes

--- a/examples/sample_ansible_deploy/containers/base/Dockerfile
+++ b/examples/sample_ansible_deploy/containers/base/Dockerfile
@@ -1,8 +1,18 @@
 FROM rockylinux:8
 
-RUN dnf check-update; dnf update -y; dnf install -y python3 sudo;
+RUN dnf check-update; dnf update -y;
+RUN dnf install -y python3 sudo openssh-server;
 
-RUN useradd -ms /bin/bash ansible_user && usermod -aG wheel ansible_user && echo "ansible_user ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
+# Add a user for ansible, give non-password sudoer access
+RUN useradd -ms /bin/bash -p "" ansible_user && usermod -aG wheel ansible_user && echo "ansible_user ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
 
-# Launch systemd
+# Generate hostkeys and allow empty password ssh access
+RUN /usr/bin/ssh-keygen -A && echo "PermitEmptyPasswords yes" >> /etc/ssh/sshd_config && rm /run/nologin
+
+# Non-systemd option (Docker) 
+# Launch ssh server to allow ansible connections
+CMD ["/usr/sbin/sshd", "-D"]
+
+# Systemd Option (Podman)
+# RUN systemctl enable sshd
 # CMD [ "/sbin/init" ]
