--- a/examples/sample_ansible_deploy/inventory/hosts.yml
+++ b/examples/sample_ansible_deploy/inventory/hosts.yml
@@ -1,6 +1,11 @@
 hestia:
   children:
     controller_group_0:
+    clients:
+
+clients:
+  hosts:
+    hestia_client:
 
 controller_group_0:
   children:
@@ -9,17 +14,50 @@ controller_group_0:
 
 controllers:
   hosts:
-    hestia-controller:
+    hestia_controller_0:
 
 workers:
   children:
-    motr:
-    phobos:
+    file_hsm_workers:
+    # motr_workers:
+    # phobos_workers:
 
-motr-workers:
+file_hsm_workers:
   hosts:
-    hestia-worker-motr: 
+    hestia_worker_0:
+      hestia_object_store_backends:
+        - backend_type: file
+          tier_names:
+            - "0"
+          config:
+            root: object_store/tiera
+        - backend_type: file
+          tier_names:
+            - "0"
+          config:
+            root: object_store/tierb
+    hestia_worker_1:
+      hestia_object_store_backends:
+        - backend_type: "file_hsm"
+          tier_names: ["2", "3", "4"]
 
-phobos-workers:
-  hosts:
-    hestia-worker-phobos:
+# Mock Motr & Phobos Examples
+
+# motr_workers:
+#   hosts:
+#     hestia_worker_motr:
+#       hestia_node_backends:
+#         - backend_type: "mock_motr"
+#           tier_names: ["0"]
+#           config:
+#             tier_info:
+#               - name: "name0"
+#                 identifier: "identifier0"
+#                 description: "test tier"
+
+# phobos_workers:
+#   hosts:
+#     hestia_worker_phobos:
+#       hestia_node_backends:
+#         - backend_type: "mock_phobos"
+#           tier_names: ["0"]
