--- a/infra/ansible/roles/hestia_worker_node/tasks/main.yml
+++ b/infra/ansible/roles/hestia_worker_node/tasks/main.yml
@@ -6,5 +6,6 @@
   ansible.builtin.template:
     src: hestia-worker.yaml.j2
     dest: "{{ hestia_config_dir }}/hestiad.yaml"
+  become: true
   notify: 
     - "start_hestia"
