--- a/examples/sample_ansible_deploy/playbook.yml
+++ b/examples/sample_ansible_deploy/playbook.yml
@@ -1,16 +1,20 @@
 ---
 # Deploy Hestia locally on a test cluster with controller and worker nodes
-- hosts: hestia:&controllers
+- hosts: controllers
   roles:
     - hestia_controller_node
 
-- hosts: hestia:&workers
+- hosts: workers
   roles:
     - hestia_worker_node
 
+- hosts: clients
+  roles:
+    - hestia_common
+
 # Execute Basic Testing on Setup
 - name: Test Hestia
-  hosts: hestia
+  hosts: controllers:workers
 
   tasks:
   - ansible.builtin.shell: 'curl localhost:8080/api/v1/ping'
