Updates to default config values, example fixes

--- a/examples/sample_ansible_deploy/inventory/hosts.yml
+++ b/examples/sample_ansible_deploy/inventory/hosts.yml
@@ -26,16 +26,8 @@ file_hsm_workers:
   hosts:
     hestia_worker_0:
       hestia_object_store_backends:
-        - backend_type: file
-          tier_names:
-            - "0"
-          config:
-            root: object_store/tiera
-        - backend_type: file
-          tier_names:
-            - "0"
-          config:
-            root: object_store/tierb
+        - backend_type: "file_hsm"
+          tier_names: ["0", "1"]
     hestia_worker_1:
       hestia_object_store_backends:
         - backend_type: "file_hsm"
