--- a/src/base/network/client/http/CMakeLists.txt
+++ b/src/base/network/client/http/CMakeLists.txt
@@ -1,34 +1,21 @@
 include(AddModule)
 
-set(OPTIONAL_HEADERS)
-set(OPTIONAL_SOURCES)
-set(OPTIONAL_DEPENDENCIES)
-set(OPTIONAL_INCLUDE_DIRS)
-
 fetch_curl()
-list(APPEND OPTIONAL_HEADERS 
-    curl/CurlClient.h
-    curl/CurlHandle.h
-    )
-list(APPEND OPTIONAL_SOURCES 
-    curl/CurlClient.cc
-    curl/CurlHandle.cc
-    )
-list(APPEND OPTIONAL_DEPENDENCIES CURL::libcurl)
-list(APPEND OPTIONAL_INCLUDE_DIRS curl)
 
 add_module(
     MODULE_NAME http_client 
     HEADERS
         HttpClient.h 
-        ${OPTIONAL_HEADERS}
+        curl/CurlClient.h
+        curl/CurlHandle.h
     SOURCES
         HttpClient.cc 
-        ${OPTIONAL_SOURCES}
+        curl/CurlClient.cc
+        curl/CurlHandle.cc
+    INTERNAL_INCLUDE_DIRS
+        curl
     INTERNAL_DEPENDENCIES 
         protocol
     DEPENDENCIES 
-        ${OPTIONAL_DEPENDENCIES} 
-    INTERNAL_INCLUDE_DIRS
-        ${OPTIONAL_INCLUDE_DIRS} 
+        CURL::libcurl 
 )
