--- a/src/hestia/CMakeLists.txt
+++ b/src/hestia/CMakeLists.txt
@@ -18,10 +18,11 @@ add_module(
         web/s3/HestiaS3WebApp.h
         web/s3/S3UrlRouter.h
         web/s3/middleware/S3AuthenticationMiddleware.h 
-        web/s3/middleware/S3AuthorisationSession.h
-        web/s3/views/S3ContainerView.h 
+        web/s3/middleware/S3AuthorisationChecker.h
+        web/s3/views/S3BucketView.h 
         web/s3/views/S3ObjectView.h
-        web/s3/views/S3ContainerListView.h
+        web/s3/views/S3WebView.h 
+        web/s3/views/S3BucketListView.h
     SOURCES
         HestiaCli.cc
         HestiaClient.cc
@@ -39,10 +40,12 @@ add_module(
         web/s3/HestiaS3WebApp.cc
         web/s3/S3UrlRouter.cc
         web/s3/middleware/S3AuthenticationMiddleware.cc 
-        web/s3/middleware/S3AuthorisationSession.cc
-        web/s3/views/S3ContainerView.cc 
+        web/s3/middleware/S3AuthorisationChecker.cc
+        web/s3/views/S3BucketView.cc 
         web/s3/views/S3ObjectView.cc
-        web/s3/views/S3ContainerListView.cc
+        web/s3/views/S3WebView.cc
+        web/s3/views/S3BucketListView.cc
+        web/s3/views/S3ViewUtils.cc
     INTERNAL_INCLUDE_DIRS
         application
         web/s3 
