--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -18,7 +18,7 @@ if(HESTIA_BUILD_TESTS)
     add_custom_target(${PROJECT_NAME}_ci_tests)
     add_custom_command(
         TARGET ${PROJECT_NAME}_ci_tests POST_BUILD
-        COMMAND python3 -m pytest --verbose ${CMAKE_SOURCE_DIR}/infra/scripts/ci/hestia_ci
+        COMMAND python3 -m pytest --verbose ${CMAKE_SOURCE_DIR}/infra/scripts/ci
         WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} VERBATIM
     )
 
