--- a/test/unit_tests/CMakeLists.txt
+++ b/test/unit_tests/CMakeLists.txt
@@ -76,6 +76,8 @@ target_link_libraries(${UNIT_TEST_MODULE} PRIVATE
 add_dependencies(${UNIT_TEST_MODULE} hestia_mocks)
 
 target_code_coverage(hestia_common ALL)
+target_code_coverage(hestia_crud ALL)
+target_code_coverage(hestia_app ALL)
 target_code_coverage(hestia_server ALL)
 target_code_coverage(hestia_storage ALL)
 target_code_coverage(hestia_mock_phobos_plugin ALL)
@@ -88,6 +90,7 @@ if(${HESTIA_WITH_MOTR})
     target_code_coverage(hestia_motr_plugin ALL)
 endif()
 
+target_code_coverage(hestia_hsm ALL)
 target_code_coverage(hestia_main)
 target_code_coverage(hestia_lib ALL)
 target_code_coverage(${UNIT_TEST_MODULE} ALL)
