--- a/test/data/configs/hestia_controller_with_backends.yaml
+++ b/test/data/configs/hestia_controller_with_backends.yaml
@@ -5,21 +5,29 @@ server:
   tag: controller0
 
 tiers:
-  - name: "0"
-  - name: "1"
-  - name: "2"
-  - name: "3"
-  - name: "4"
+  - id: "00000000-0000-0000-0000-000000000001"
+    priority: 0
+  - id: "00000000-0000-0000-0000-000000000002"
+    priority: 1
+  - id: "00000000-0000-0000-0000-000000000003"
+    priority: 2
+  - id: "00000000-0000-0000-0000-000000000004"
+    priority: 3
+  - id: "00000000-0000-0000-0000-000000000005"
+    priority: 4
 
 object_store_backends:
   - backend_type: file_hsm
-    tier_names: ["0", "1", "2", "3", "4"]
+    tiers: ["00000000-0000-0000-0000-000000000001", 
+            "00000000-0000-0000-0000-000000000002", 
+            "00000000-0000-0000-0000-000000000003", 
+            "00000000-0000-0000-0000-000000000004", 
+            "00000000-0000-0000-0000-000000000005"]
     config: 
       root: hsm_object_store_controller0
 
 event_feed:
   active: true
-
 
 logger:
   level: warn
