Pre-release testing - Fixes for server backend registration

--- a/test/data/configs/hestia_controller_with_backends.yaml
+++ b/test/data/configs/hestia_controller_with_backends.yaml
@@ -18,10 +18,11 @@ tiers:
 
 object_store_backends:
   - backend_type: file_hsm
-    tiers: ["00000000-0000-0000-0000-000000000001", 
-            "00000000-0000-0000-0000-000000000002", 
-            "00000000-0000-0000-0000-000000000003", 
-            "00000000-0000-0000-0000-000000000004", 
+    tiers: 
+      ids: ["00000000-0000-0000-0000-000000000001",
+            "00000000-0000-0000-0000-000000000002",
+            "00000000-0000-0000-0000-000000000003",
+            "00000000-0000-0000-0000-000000000004",
             "00000000-0000-0000-0000-000000000005"]
     config: 
       root: hsm_object_store_controller0
@@ -30,4 +31,4 @@ event_feed:
   active: true
 
 logger:
-  level: warn
+  level: debug
