--- a/test/data/configs/hestia_worker.yaml
+++ b/test/data/configs/hestia_worker.yaml
@@ -9,6 +9,11 @@ server:
 
 object_store_backends:
   - backend_type: file_hsm
-    tier_names: ["0", "1", "2", "3", "4"]
+    tiers: 
+      ids: ["00000000-0000-0000-0000-000000000001",
+            "00000000-0000-0000-0000-000000000002",
+            "00000000-0000-0000-0000-000000000003",
+            "00000000-0000-0000-0000-000000000004",
+            "00000000-0000-0000-0000-000000000005"]
     config: 
       root: hsm_object_store_worker0
