--- a/test/data/configs/hestia_controller.yaml
+++ b/test/data/configs/hestia_controller.yaml
@@ -1,15 +1,20 @@
 server:
   host: 127.0.0.1
-  port: 8088
+  port: 8080
   controller: true
   tag: controller0
 
 tiers:
-  - name: "0"
-  - name: "1"
-  - name: "2"
-  - name: "3"
-  - name: "4"
+  - id: "00000000-0000-0000-0000-000000000001"
+    priority: 0
+  - id: "00000000-0000-0000-0000-000000000002"
+    priority: 1
+  - id: "00000000-0000-0000-0000-000000000003"
+    priority: 2
+  - id: "00000000-0000-0000-0000-000000000004"
+    priority: 3
+  - id: "00000000-0000-0000-0000-000000000005"
+    priority: 4
 
 event_feed:
   active: true
