Fixes for IO-SEA integrations and add docs

--- a/test/data/configs/hestia_worker.yaml
+++ b/test/data/configs/hestia_worker.yaml
@@ -17,3 +17,6 @@ object_store_backends:
             "00000000-0000-0000-0000-000000000005"]
     config: 
       root: hsm_object_store_worker0
+
+logger:
+  level: debug
