--- a/test/data/configs/s3_server.yaml
+++ b/test/data/configs/s3_server.yaml
@@ -7,10 +7,12 @@ server:
     interface: s3
 
 tiers:
-  - name: "0"
+  - id: "00000000-0000-0000-0000-000000000001"
+    priority: 0
 
 object_store_backends:
   - backend_type: file
-    tier_names: ["0"]
+    tiers: 
+      ids: ["00000000-0000-0000-0000-000000000001"]
     config: 
       root: s3_server_object_store
