Remove Proxygen as no longer need it

--- a/test/data/configs/s3_server.yaml
+++ b/test/data/configs/s3_server.yaml
@@ -16,3 +16,6 @@ object_store_backends:
       ids: ["00000000-0000-0000-0000-000000000001"]
     config: 
       root: s3_server_object_store
+
+logger:
+  level: debug
