--- a/test/unit_tests/CMakeLists.txt
+++ b/test/unit_tests/CMakeLists.txt
@@ -50,6 +50,7 @@ set(UNIT_TEST_SOURCES
     hsm/TestHsmEventSink.cc
     hsm/TestDistributedHsmService.cc
     hsm/TestDistributedHsmObjectStoreClient.cc
+    hsm/TestHsmObjectStoreClientManager.cc
     hestia/TestHestiaClient.cc
     hestia/TestHestiaCApi.cc
     hestia/TestHestiaHLCApi.cc
