--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -432,3 +432,15 @@ Master_deploy_major_build:
     HESTIA_WITH_MOTR: "OFF"
     HESTIA_WITH_PHOBOS: "OFF"
     HESTIA_PROJECT_VERSION: "${CI_MAJOR_RELEASE_VERSION}"
+sync-with-github:
+  before_script:
+    - git config --global user.name "bgursoy"
+    - git config --global user.email “buket.gursoy@ichec.ie”
+  script:
+    - git remote add github $REMOTE_REPOSITORY_URL
+    - git checkout master
+    - git pull origin master
+    - git pull github master
+    - git status
+    - git push https://root:$ACCESS_TOKEN@$CI_SERVER_HOST/$CI_PROJECT_PATH.git HEAD:master
+
