--- a/test/data/configs/phobos/hestia_mock_phobos.yaml
+++ b/test/data/configs/phobos/hestia_mock_phobos.yaml
@@ -1,3 +1,9 @@
+server:
+  host: 127.0.0.1
+  port: 8080
+  controller: true
+  tag: controller0
+
 tiers:
   - id: "00000000-0000-0000-0000-000000000001"
     priority: 0
@@ -13,6 +19,8 @@ object_store_backends:
   - backend_type: mock_phobos
     tiers: 
       ids: ["00000000-0000-0000-0000-000000000002"]
+    config: 
+      root: phobos_tests_mock_phobos
 
 event_feed:
   active: true
